[gd_scene load_steps=22 format=3]

[ext_resource type="Script" path="res://Script/Shop/Shop_item.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dk305v22hpwlr" path="res://Art/Shop/83.png" id="2"]
[ext_resource type="PackedScene" uid="uid://b3qof5s6nwscy" path="res://Scene/BackPack/Box_1.tscn" id="3"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="4"]
[ext_resource type="Texture2D" uid="uid://dtj67yrv3qwvd" path="res://Art/Shop/93.png" id="5"]
[ext_resource type="Texture2D" uid="uid://g5usknq3jyc3" path="res://Art/Shop/87.png" id="6"]
[ext_resource type="Texture2D" uid="uid://codwej1d0qqy1" path="res://Art/Shop/95.png" id="7"]
[ext_resource type="Texture2D" uid="uid://eqmwmkphoew3" path="res://Art/Shop/97.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cdnu4s87bkyag" path="res://Art/Shop/100.png" id="9"]
[ext_resource type="Texture2D" uid="uid://dft3ea55d3sux" path="res://Art/Shop/102.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b628ll4mec4xt" path="res://Art/Shop/89.png" id="11"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="12"]
[ext_resource type="FontFile" uid="uid://bxffo0ywp2vop" path="res://Font/1_aaa_FZCuYuan-M03S.ttf" id="13"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[node name="Shop_item" type="Node2D"]
texture_filter = 2
script = ExtResource( "1" )

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="bgg" type="ColorRect" parent="BG"]
offset_left = -95.0
offset_top = -29.0
offset_right = -33.0
offset_bottom = 34.0
color = Color(0, 1, 1, 0.203922)

[node name="Items" parent="BG/bgg" instance=ExtResource( "3" )]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 56.0
offset_bottom = 56.0
flat = true
metadata/_edit_lock_ = true

[node name="name_" type="Label" parent="BG"]
texture_filter = 2
offset_left = -29.0
offset_top = -37.0
offset_right = 98.0
offset_bottom = -11.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 9
theme_override_fonts/font = ExtResource( "4" )
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="num_" type="Sprite2D" parent="BG"]
texture_filter = 2
position = Vector2(12, -2)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="num_kj" type="Sprite2D" parent="BG/num_"]
position = Vector2(46, 0)
texture = ExtResource( "6" )
metadata/_edit_lock_ = true

[node name="num_" type="LineEdit" parent="BG/num_/num_kj"]
offset_left = -27.0
offset_top = -13.0
offset_right = 25.3125
offset_bottom = 12.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/focus = SubResource( "2" )
theme_override_styles/read_only = SubResource( "3" )
text = "1"
alignment = 1
caret_blink = true
metadata/_edit_lock_ = true

[node name="cure_num" type="TextureButton" parent="BG/num_/num_kj"]
offset_left = 25.0
offset_top = -10.0
offset_right = 43.0
offset_bottom = 2.0
focus_mode = 0
texture_normal = ExtResource( "7" )
texture_pressed = ExtResource( "7" )
texture_hover = ExtResource( "8" )
texture_disabled = ExtResource( "7" )
metadata/_edit_lock_ = true

[node name="reduce_num" type="TextureButton" parent="BG/num_/num_kj"]
offset_left = 25.0
offset_top = -1.0
offset_right = 43.0
offset_bottom = 11.0
focus_mode = 0
texture_normal = ExtResource( "9" )
texture_pressed = ExtResource( "9" )
texture_hover = ExtResource( "10" )
texture_disabled = ExtResource( "9" )
metadata/_edit_lock_ = true

[node name="goumai" type="Button" parent="BG"]
texture_filter = 2
offset_left = 29.0
offset_top = 5.0
offset_right = 109.0
offset_bottom = 41.0
theme_override_colors/icon_hover_color = Color(0.788235, 0.811765, 0.576471, 1)
theme_override_styles/normal = SubResource( "4" )
theme_override_styles/hover = SubResource( "5" )
theme_override_styles/pressed = SubResource( "6" )
theme_override_styles/disabled = SubResource( "7" )
theme_override_styles/focus = SubResource( "8" )
icon = ExtResource( "11" )
flat = true
icon_alignment = 1
metadata/_edit_lock_ = true

[node name="lh_value" type="Label" parent="BG"]
texture_filter = 2
offset_left = -32.0
offset_top = 6.0
offset_right = 36.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource( "12" )
theme_override_font_sizes/font_size = 17
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="lh_text" type="Label" parent="BG/lh_value"]
layout_mode = 0
offset_left = 38.0
offset_top = 17.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource( "13" )
theme_override_font_sizes/font_size = 12
text = "灵魂"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[connection signal="text_changed" from="BG/num_/num_kj/num_" to="." method="_on_num__text_changed" flags=18]
[connection signal="pressed" from="BG/num_/num_kj/cure_num" to="." method="_on_cure_num_pressed" flags=18]
[connection signal="pressed" from="BG/num_/num_kj/reduce_num" to="." method="_on_reduce_num_pressed" flags=18]
[connection signal="pressed" from="BG/goumai" to="." method="_on_goumai_pressed" flags=18]
